--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "fbox"
-version = "0.0.1"
+version = "0.0.1-alpha"
 edition = "2021"
+description = "A toolbox but for functions"
+repository = "https://github.com/urbanslug/fbox"
+readme = "README.md"
+license = "GPL-3.0-or-later"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
